--- a/Lab 6 -- Midterm Lab.ipynb
+++ b/Lab 6 -- Midterm Lab.ipynb
@@ -855,7 +855,7 @@
    "source": [
     "## Acknowledgements ##\n",
     "*** Ms. Sconyers: ***\n",
-    "> I would like to thank Ms. Sconyers for both helping me to better understand the way seaborn plots data, and also for introducing me to lambda functions in Python, which proved to "
+    "> I would like to thank Ms. Sconyers for both helping me to better understand the way seaborn plots data, and also for introducing me to lambda functions in Python, which proved to be very useful in this lab."
    ]
   }
  ],
